# Deep-Education

./: .gitmodules  GCN_Test.sh  README.md
dl_code_python/: GCN_pubmed.py  create_graph.py  gcnconv.py  gp_apis.py  pubmed_util.py  sparse.py
kernel/: CMakeLists.txt  csr.h  generated_pybind.h  kernel.cpp  kernel.h  kernel_pybind.cpp  op.h
pygraph/: example.py  smallworld.txt
